<resources>
    <string name="app_name">Kennel</string>
    <string name="NewUserText">Sign up!</string>
    <string name="LogIn">Log in</string>
    <string name="Close">X</string>
    <string name="SigninDetails">Enter your email.</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="PersonalDetails">Enter your details.</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="PendingReservations">Pending Reservations</string>
    <string name="PastReservation">Past Reservations</string>

    <!-- TODO: Pet Profile Fragment -->
    <string name="PetProfile">Pet Profile</string>
    <string name="DogSize1">Small</string>
    <string name="DogSize2">Medium</string>
    <string name="DogSize3">Large</string>
    <string name="Alpha">Alpha Dog</string>
    <string name="OtherDogs">Good with other dogs</string>
    <string name="PottyTrained">Potty Trained</string>
    <string name="Active">Active.Needs alot of exersice</string>
    <string name="NotActive">Not Active</string>
    <string name="Kids">Good with kids</string>
    <string name="About">Write a few lins about your pet</string>
    <string name="SaveProfile">Save</string>
    <string name="petSize">Choose the size of your pet.</string>

    <!-- TODO: Search Fragent -->
    <string name="FromDate">Check In</string>
    <string name="ToDate">Check out</string>
    <string name="where">Where?</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createPetProfile">Please create Pet Profile.</string>

    <!-- TODO:Host Details Fragent -->
    <string name="personalDetails">Personal Details:</string>
    <string name="ExperienceWithDogs">Previous experience with dogs:</string>
    <string name="Yes">YES</string>
    <string name="No">NO</string>
    <string name="OwnPets">Own any pets?</string>
    <string name="Address">Enter your address:</string>
    <string name="createHost">Create Profile</string>

    <!-- TODO:Map Fragent -->
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <!-- TODO:Search Fragent -->
    <string name="Details">Details about host:</string>
    <string name="From_date">From date</string>
    <string name="To_date">To Date</string>

    <!-- TODO:HostDetails -->
    <string name="Booking_details">Booking Details:</string>
    <string name="Book">Confirm Booking</string>

    <string name="banner_ad_unit_id">ca-app-pub-2298298234229156/5816850620</string>


</resources>
