<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              android:orientation="vertical"
               >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

   <ImageView
       android:layout_width="30dp"
       android:layout_height="30dp"
       app:srcCompat="@android:drawable/ic_menu_upload"
       android:id="@+id/profileImage_host"
       android:clickable="true"
       android:layout_alignParentTop="true"
       />

   <ImageView
       android:layout_width="200dp"
       android:layout_height="200dp"
       android:id="@+id/displayProfile_host"
       android:src="@android:drawable/ic_menu_gallery"
       android:layout_gravity="center"/>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:padding="10dp"
       >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/personalDetails"
          android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
   </LinearLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:padding="10dp">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/FirstName"/>

      <EditText
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/Name"
          android:hint="First Name"/>

   </LinearLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:padding="10dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/LastName"/>

      <EditText
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/lastName"
          android:hint="Last Name"/>


   </LinearLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="10dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/ExperienceWithDogs"
          android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/ExpDog_yes"
             android:text="@string/Yes"/>
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/ExpDog_No"
             android:text="@string/No"/>
      </LinearLayout>

   </LinearLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:padding="10dp"
       android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/OwnPets"
          android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/OwnPets_Yes"
             android:text="@string/Yes"/>
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/OwnPets_No"
             android:text="@string/No"/>

      </LinearLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="10dp">

         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/details"
             android:hint="a few lines about yourself"/>

      </LinearLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Address"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Address"
             android:id="@+id/button_address"/>

      </LinearLayout>

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/saveHost_btn"
          android:text="@string/createHost"
          android:layout_gravity="center"/>

   </LinearLayout>




</LinearLayout>


</ScrollView>