<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.bignerdranch.android.kennel.PetProfileFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@android:drawable/ic_menu_upload"
                    android:id="@+id/profileImage"
                    android:clickable="true"
                    android:layout_alignParentTop="true"
                    />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/displayProfile"
                android:src="@android:drawable/ic_menu_gallery"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/PetName"
                android:text="PetName"
                />


            <LinearLayout
                android:layout_width="312dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="47dp"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_weight="0.48">


                <CheckBox
                    android:text="@string/DogSize1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/DogSize1"
                    />

                <CheckBox
                    android:text="@string/DogSize2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/DogSize2"/>

                <CheckBox
                    android:text="@string/DogSize3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/DogSize3"/>
            </LinearLayout>


            <EditText
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:hint="@string/About"
                android:id="@+id/About"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SaveProfile"
                android:layout_gravity="center"
                android:text="@string/SaveProfile"/>
        </LinearLayout>

    </RelativeLayout>


</ScrollView>