<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/activity_login"
    tools:context="com.bignerdranch.android.kennel.LoginActivity"
    >

    <!--add clickable views for close and login-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LogIn"
            android:id="@+id/Login"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:onClick="onLogin"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Close"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:onClick="onClickClose"
            android:paddingBottom="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                />

            <Button
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:id="@+id/newUserButton"
                android:layout_gravity="center_horizontal"
                android:text="@string/NewUserText"
                android:background="@color/white"
                android:onClick="onSignup"/>

        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/FragmentContainer">
    </RelativeLayout>

</LinearLayout>
